# mal-toolbox

./: .buildinfo  .gitignore  AUTHORS  README.md  about.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: about.doctree  environment.pickle  index.doctree  installation.doctree
.doctrees/about/: attackgraph.doctree  languagegraph.doctree  model.doctree
.doctrees/apidocs/: maltoolbox.attackgraph.analyzers.apriori.doctree  maltoolbox.attackgraph.analyzers.doctree  maltoolbox.attackgraph.attacker.doctree  maltoolbox.attackgraph.attackgraph.doctree  maltoolbox.attackgraph.doctree  maltoolbox.attackgraph.node.doctree  maltoolbox.attackgraph.query.doctree  maltoolbox.doctree  maltoolbox.exceptions.doctree  maltoolbox.file_utils.doctree  maltoolbox.ingestors.doctree  maltoolbox.ingestors.neo4j.doctree  maltoolbox.language.classes_factory.doctree  maltoolbox.language.compiler.doctree  maltoolbox.language.compiler.mal_lexer.doctree  maltoolbox.language.compiler.mal_parser.doctree  maltoolbox.language.compiler.mal_visitor.doctree  maltoolbox.language.doctree  maltoolbox.language.languagegraph.doctree  maltoolbox.language.specification.doctree  maltoolbox.model.doctree  maltoolbox.patternfinder.attackgraph_patterns.doctree  maltoolbox.patternfinder.doctree  maltoolbox.translators.doctree  maltoolbox.translators.securicad.doctree  maltoolbox.translators.updater.doctree  maltoolbox.wrappers.doctree
.github/: CODEOWNERS
.github/workflows/: documentation.yml  lint.yml  publish-to-pypi-and-test-pypi.yml  publish-to-test-pypi.yml  ruff_lint.yml  run-mypy.yml  test-pytest.yml
_modules/: index.html
_modules/maltoolbox/: exceptions.html  file_utils.html  model.html
_sources/: about.rst.txt
_sources/about/: attackgraph.rst.txt  model.rst.txt
_sources/apidocs/: maltoolbox.attackgraph.analyzers.apriori.rst.txt  maltoolbox.attackgraph.analyzers.rst.txt  maltoolbox.attackgraph.attackgraph.rst.txt  maltoolbox.attackgraph.node.rst.txt  maltoolbox.attackgraph.query.rst.txt  maltoolbox.attackgraph.rst.txt  maltoolbox.exceptions.rst.txt  maltoolbox.ingestors.rst.txt  maltoolbox.language.classes_factory.rst.txt  maltoolbox.language.compiler.mal_lexer.rst.txt  maltoolbox.language.compiler.mal_visitor.rst.txt  maltoolbox.language.languagegraph.rst.txt  maltoolbox.language.rst.txt  maltoolbox.language.specification.rst.txt  maltoolbox.patternfinder.rst.txt  maltoolbox.rst.txt  maltoolbox.translators.rst.txt
about/: attackgraph.html  languagegraph.html  model.html
apidocs/: maltoolbox.attackgraph.analyzers.apriori.html  maltoolbox.attackgraph.analyzers.html  maltoolbox.attackgraph.attacker.html  maltoolbox.attackgraph.attackgraph.html  maltoolbox.attackgraph.html  maltoolbox.attackgraph.node.html  maltoolbox.attackgraph.query.html  maltoolbox.exceptions.html  maltoolbox.file_utils.html  maltoolbox.html  maltoolbox.ingestors.html  maltoolbox.ingestors.neo4j.html  maltoolbox.language.classes_factory.html  maltoolbox.language.compiler.html  maltoolbox.language.compiler.mal_lexer.html  maltoolbox.language.compiler.mal_parser.html  maltoolbox.language.compiler.mal_visitor.html  maltoolbox.language.html  maltoolbox.language.languagegraph.html  maltoolbox.language.specification.html  maltoolbox.model.html  maltoolbox.patternfinder.attackgraph_patterns.html  maltoolbox.patternfinder.html  maltoolbox.translators.html  maltoolbox.translators.securicad.html  maltoolbox.translators.updater.html  maltoolbox.wrappers.html
docs/: Makefile  about.rst  api.rst  conf.py  index.rst  installation.rst  maltoolbox.attackgraph.rst  maltoolbox.language.compiler.rst  maltoolbox.language.rst  maltoolbox.rst  modules.rst
docs/about/: attackgraph.rst  languagegraph.rst  model.rst
docs/apidocs/: maltoolbox.attackgraph.attacker.rst  maltoolbox.attackgraph.rst  maltoolbox.file_utils.rst  maltoolbox.ingestors.neo4j.rst  maltoolbox.language.compiler.mal_parser.rst  maltoolbox.language.compiler.rst  maltoolbox.language.rst  maltoolbox.model.rst  maltoolbox.patternfinder.attackgraph_patterns.rst  maltoolbox.rst  maltoolbox.translators.securicad.rst  maltoolbox.translators.updater.rst  maltoolbox.wrappers.rst
examples/: compile_language.md  configure_maltoolbox.md  create_model.md  generate_attack_graph.md  run_simulation.md  visualize.md
examples/resources/: attack_graph.json  model.yml  org.mal-lang.coreLang-1.0.0.mar  scenario.yml
examples/scripts/: create_model.py  generate_attack_graph.py  requirements.txt  run_simulation.py  visualize.py
maltoolbox/: __init__.py  __main__.py  cl_parser.py  default.conf  exceptions.py  file_utils.py  main.py  model.py  probs_utils.py  str_utils.py  utils.py  wrappers.py
maltoolbox/attackgraph/: __init__.py  attacker.py  attackgraph.py  detector.py  factories.py  generate.py  node.py  node_getters.py  query.py  ttcs.py
maltoolbox/ingestors/: neo4j.py
maltoolbox/language/: __init__.py  classes_factory.py  detector.py  expression_chain.py  language_graph_asset.py  language_graph_assoc.py  language_graph_attack_step.py  language_graph_builder.py  language_graph_detector.py  language_graph_loaders.py  language_graph_lookup.py  language_graph_serialization.py  languagegraph.py  languagegraph_asset.py  languagegraph_assoc.py  languagegraph_attack_step.py  predefined_ttcs.yml  specification.py  step_expression_processor.py
maltoolbox/lexer_parser/: .gitignore  __main__.py  mal.g4  mal.interp  malLexer.interp  malLexer.py  malLexer.tokens  malListener.py  malParser.py  malVisitor.py  mal_tree_processor.py  mal_visitor.py  test.sh
maltoolbox/model/: model.py
maltoolbox/patternfinder/: attackgraph_patterns.py
maltoolbox/patterns/: attackgraph_patterns.py
maltoolbox/translators/: __init__.py  gephi.py  gexf.py  networkx.py  securicad.py  updater.py
maltoolbox/visualization/: __init__.py  draw_io_utils.py  neo4j_utils.py  (+3 more)
tests/: conftest.py  requirements.txt  test_attackgraph.py  test_model.py  test_node.py  test_probs_utils.py  test_visualization.py  test_wrappers.py
(+370 files in other folders)
