[project]
name = "mal-toolbox"
version = "1.0.5"
authors = [
  { name="Andrei Buhaiu", email="buhaiu@kth.se" },
  { name="Joakim Loxdal", email="loxdal@kth.se" },
  { name="Nikolaos Kakouros", email="nkak@kth.se" },
  { name="Jakob Nyberg", email="jaknyb@kth.se" },
  { name="Giuseppe Nebbione", email="nebbione@kth.se" },
  { name="Sandor Berglund", email="sandor@kth.se" }
]
description = "A collection of tools used to create MAL models and attack graphs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "graphviz",
  "antlr4-tools",
  "antlr4-python3-runtime",
  "docopt",
  "PyYAML",
]
license = {text = "Apache Software License"}
keywords = ["mal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

[project.urls]
"Homepage" = "https://github.com/mal-lang/mal-toolbox"
"Bug Tracker" = "https://github.com/mal-lang/mal-toolbox/issues"
"Repository" = "https://github.com/mal-lang/mal-toolbox"

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
"maltoolbox" = "maltoolbox.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["maltoolbox*"]

[tool.setuptools.package-data]
maltoolbox = ["*.conf*", "py.typed"]

[tool.pytest.ini_options]
pythonpath = ['.']
filterwarnings = "ignore:invalid escape sequence"

[tool.mypy]
exclude = [
  'maltoolbox/ingestors',
  'maltoolbox/translators',
  'maltoolbox/language/compiler'
]
allow_redefinition = true
